--- a/package.json
+++ b/package.json
@@ -5,8 +5,6 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "export": "next export",
-    "build-static": "next build && next export",
     "start": "next start --hostname 127.0.0.1",
     "lint": "next lint"
   },
@@ -15,7 +13,7 @@
     "@react-three/fiber": "^7.0.1",
     "contentful": "^9.2.5",
     "direction": "^2.0.1",
-    "next": "^12.3.4",
+    "next": "^10.2.3",
     "next-compose-plugins": "^2.2.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -24,6 +22,7 @@
     "three.meshline": "^1.3.0"
   },
   "devDependencies": {
+    "@types/node": "^14.14.41",
     "@types/react": "17.0.11",
     "@types/styled-components": "^5.1.15",
     "@types/three": "^0.129.1",
