--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,12 +26,10 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: 16.13.0
+          node-version: 18
           cache: yarn
       - name: Install dependencies
-        run: |
-          yarn install
-          yarn add --dev @types/node
+        run: yarn install
       - name: Build and Export
         run: yarn build-static
       - name: Upload artifact
